<resources>
    <string name="app_name">AmandeepAujla_COMP304_Lab3</string>
    <string name="exercise1">Exercise 1</string>
    <string name="exercise2">Exercise 2</string>
    <string name="exercise3">Exercise 3</string>

    <string name="ex1_linethickness">Line Thickness</string>
    <string name="ex1_linecolor">Line Color</string>
    <string name="ex1_arrowkeys">Arrow Keys</string>

    <string-array name="line_thickness_values">
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <string-array name="line_color_values">
        <item>Red</item>
        <item>Yellow</item>
        <item>Cyan</item>
    </string-array>

    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="cyan">Cyan</string>


    <string name="clr_button">Clear</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
</resources>
